MOBI-7 - mobileshowcase - adjust results width to avoid wrapping on iphone - popup example form styling
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@34916 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/samples/mobileshowcase/src/main/webapp/resources/css/showcase.css
+++ b/samples/mobileshowcase/src/main/webapp/resources/css/showcase.css
@@ -470,7 +470,7 @@ html.bberry .mobi-fieldset-row-group {
 }
 .accordionpage{ min-height:1000px;}
 
-.results label{ display: inline-block; width: 50%; max-width: 50%; text-align:left !important;}
-.results span{ display: inline-block; text-align: right; line-height: 1.8em; vertical-align: middle;  width: 50%; max-width: 50%;}
+.results label{ display: inline-block; width: 49%; max-width: 49%; text-align:left !important;}
+.results span{ display: inline-block; text-align: right; line-height: 1.8em; vertical-align: middle;  width: 49%; max-width: 49%;}
 
 
